--- a/main/webpage/app.css
+++ b/main/webpage/app.css
@@ -35,7 +35,17 @@ h4 {
 }
 #latest_firmware {
 	color: #1d3557;
-}	
+}
+
+#x_coordinate {
+	display:inline;
+	color: #1d3557;
+}
+
+#y_coordinate {
+	display:inline;
+	color: #1d3557;
+}
 
 .buttons {
     padding: 5px;
